--- a/data/projects.json
+++ b/data/projects.json
@@ -1,78 +1,30 @@
 {
     "projects": [
         {
-            "title": "Bomb",
-            "image": "assets/Portfolio/GameBomb.gif",
-            "github": "https://github.com/artkriukov/Boom",
-            "stack": [
-                {"name": "UIKit", "color": "#1E5945"},
-                {"name": "MVC", "color": "#1E5945"},
-                {"name": "Lottie", "color": "#1E5945"},
-                {"name": "UserDefoults", "color": "#1E5945"}
-            ],
-            "category": "team",
-            "roleDescription": "Разработал игровой экран (GameView) с использованием современных технологий и подходов.",
-            "roleTasks": [
-                "Создал динамичные анимации с помощью библиотеки Lottie, включая анимацию тиканья бомбы и взрыва.",
-                "Интегрировал звуковые эффекты: зацикленное тиканье бомбы и фоновую музыку.",
-                "Реализовал интерактивный таймер с функциями паузы и возобновления.",
-                "Добавил вибрацию для обратной связи при завершении игры.",
-                "Реализовал переход на следующий экран по завершении таймера."
-            ],
-            "details": "Бомба — это iOS-приложение, которое идеально подойдет для веселых вечеринок! Игроки по очереди отвечают на вопросы, а если не успели — бомба взрывается."
-        },
-        {
+            "id": "moviequiz",
             "title": "MovieQuiz",
-            "image": "assets/Portfolio/MovieQuiz.png",
-            "github": "https://github.com/artkriukov/MovieQuiz",
-            "stack": [
-                {"name": "MVP", "color": "#1E5945"},
-                {"name": "Storyboard", "color": "#1E5945"},
-                {"name": "URLSession", "color": "#1E5945"},
-                {"name": "UserDefoults", "color": "#1E5945"},
-                {"name": "Unit-tests", "color": "#1E5945"},
-                {"name": "UI-tests", "color": "#1E5945"}
-            ],
             "category": "personal",
-            "roleDescription": "Разработал приложение для викторин на основе фильмов с использованием архитектуры MVP.",
-            "roleTasks": [
-                "Интеграция с API: Использовал NetworkClient для загрузки данных о фильмах.",
-                "Загрузка и обработка данных: Реализовал MoviesLoader для загрузки списка популярных фильмов.",
-                "Генерация вопросов: Создал QuestionFactory для формирования вопросов на основе рейтинга фильмов.",
-                "Пользовательский интерфейс: Разработал экран викторины с использованием Storyboard.",
-                "Логика викторины: Реализовал MovieQuizPresenter для управления логикой викторины.",
-                "Статистика и результаты: Интегрировал StatisticService для отслеживания прогресса пользователя.",
-                "Обработка ошибок: Реализовал обработку ошибок сети и отображение сообщений пользователю.",
-                "Тестирование и отладка: Написал Unit-тесты и UI-тесты."
-            ],
-            "details": "Одностраничное приложение с квизами о фильмах из топ-250 рейтинга и самых популярных фильмов IMDb."
+            "image": "assets/projects/moviequiz.jpg",
+            "stack": ["Swift", "UIKit"],
+            "details": {
+                "description": "Описание проекта 1...",
+                "features": ["Feature 1", "Feature 2"],
+                "tasks": ["Task 1", "Task 2"],
+                "github": "https://github.com/example1"
+            }
         },
         {
+            "id": "shopee", 
             "title": "Shoppe",
-            "image": "assets/Portfolio/Shoppe.jpg",
-            "github": "https://github.com/artkriukov/Shoppe",
-            "stack": [
-                {"name": "VIPER", "color": "#1E5945"},
-                {"name": "Firebase", "color": "#1E5945"},
-                {"name": "URLSession", "color": "#1E5945"},
-                {"name": "StorageManager", "color": "#1E5945"}
-            ],
             "category": "team",
-            "roleDescription": "Разработал экран корзины с использованием архитектуры VIPER.",
-            "roleTasks": [
-                "Реализовал взаимодействие с данными корзины, включая добавление, удаление и изменение количества товаров.",
-                "Обеспечил подсчет общей суммы и количества товаров.",
-                "Работал со StorageManager для загрузки и обновления данных.",
-                "Обеспечил связь между слоями Interactor, Presenter и View для корректного отображения данных и обработки пользовательских действий.",
-                "Участвовал в оптимизации и рефакторинге кода для улучшения производительности и читаемости."
-            ],
-            "details": "Shoppe – это универсальное мобильное приложение для онлайн-шопинга, которое делает покупки проще, удобнее и доступнее. Находите нужные товары, сохраняйте избранное, оформляйте заказы в разных валютах и получайте товары с доставкой по всему миру!"
+            "image": "assets/projects/shoppe.jpg",
+            "stack": ["Swift", "Firebase"],
+            "details": {
+                "description": "Описание проекта 2...",
+                "features": ["Feature 1", "Feature 2"],
+                "tasks": ["Task 1", "Task 2"],
+                "github": "https://github.com/example2"
+            }
         }
     ]
 }
-
-
-
-
-
-
