--- a/data/projects.json
+++ b/data/projects.json
@@ -1,30 +1,30 @@
 {
     "projects": [
-        {
-            "id": "moviequiz",
-            "title": "MovieQuiz",
-            "category": "personal",
-            "image": "assets/projects/moviequiz.jpg",
-            "stack": ["Swift", "UIKit"],
-            "details": {
-                "description": "Описание проекта 1...",
-                "features": ["Feature 1", "Feature 2"],
-                "tasks": ["Task 1", "Task 2"],
-                "github": "https://github.com/example1"
-            }
-        },
-        {
-            "id": "shopee", 
-            "title": "Shoppe",
-            "category": "team",
-            "image": "assets/projects/shoppe.jpg",
-            "stack": ["Swift", "Firebase"],
-            "details": {
-                "description": "Описание проекта 2...",
-                "features": ["Feature 1", "Feature 2"],
-                "tasks": ["Task 1", "Task 2"],
-                "github": "https://github.com/example2"
-            }
+      {
+        "id": "moviequiz",
+        "title": "MovieQuiz",
+        "category": "personal",
+        "image": "assets/projects/moviequiz.jpg",
+        "stack": ["Swift", "UIKit"],
+        "details": {
+          "description": "Киновикторина с вопросами о фильмах",
+          "features": ["10 категорий вопросов", "Рейтинг игроков"],
+          "tasks": ["Реализация игрового движка", "Интеграция с API"],
+          "github": "https://github.com/yourusername/moviequiz"
         }
+      },
+      {
+        "id": "shopee",
+        "title": "Shoppe",
+        "category": "team",
+        "image": "assets/projects/shoppe.jpg",
+        "stack": ["Swift", "Firebase"],
+        "details": {
+          "description": "Мобильное приложение для интернет-магазина",
+          "features": ["Каталог товаров", "Корзина покупок"],
+          "tasks": ["Разработка UI", "Интеграция с бэкендом"],
+          "github": "https://github.com/yourusername/shoppe"
+        }
+      }
     ]
-}
+  }
