--- a/data/projects.json
+++ b/data/projects.json
@@ -5,12 +5,21 @@
         "title": "MovieQuiz",
         "category": "personal",
         "image": "assets/projects/MovieQuiz.png",
-        "stack": ["Swift", "UIKit"],
+        "stack": ["Storyboard", "MVP", "URLSession", "UserDefoults", "Unit-tests", "UI-tests"],
         "details": {
-          "description": "Киновикторина с вопросами о фильмах",
-          "features": ["10 категорий вопросов", "Рейтинг игроков"],
-          "tasks": ["Реализация игрового движка", "Интеграция с API"],
-          "github": "https://github.com/yourusername/moviequiz"
+          "description": "Одностраничное приложение с квизами о фильмах из топ-250 рейтинга и самых популярных фильмов IMDb.",
+          "features": ["Разработал приложение для викторин на основе фильмов с использованием архитектуры MVP."],
+          "tasks": [
+            "Интеграция с API: Использовал NetworkClient для загрузки данных о фильмах.",
+            "Загрузка и обработка данных: Реализовал MoviesLoader для загрузки списка популярных фильмов.",
+            "Генерация вопросов: Создал QuestionFactory для формирования вопросов на основе рейтинга фильмов.",
+            "Пользовательский интерфейс: Разработал экран викторины с использованием Storyboard.",
+            "Логика викторины: Реализовал MovieQuizPresenter для управления логикой викторины.",
+            "Статистика и результаты: Интегрировал StatisticService для отслеживания прогресса пользователя.",
+            "Обработка ошибок: Реализовал обработку ошибок сети и отображение сообщений пользователю.",
+            "Тестирование и отладка: Написал Unit-тесты и UI-тесты."
+          ],
+          "github": "https://github.com/artkriukov/MovieQuiz"
         }
       },
       {
@@ -18,12 +27,41 @@
         "title": "Shoppe",
         "category": "team",
         "image": "assets/projects/shoppe.jpg",
-        "stack": ["Swift", "Firebase"],
+        "stack": ["UIKit", "VIPER", "StorageManager"],
+        "details": {
+          "description": "Shoppe – это универсальное мобильное приложение для онлайн-шопинга, которое делает покупки проще, удобнее и доступнее. Находите нужные товары, сохраняйте избранное, оформляйте заказы в разных валютах и получайте товары с доставкой по всему миру!",
+          "features": [
+            "Разработал экран корзины с использованием архитектуры VIPER."
+          ],
+          "tasks": [
+            "Реализовал взаимодействие с данными корзины, включая добавление, удаление и изменение количества товаров.",
+            "Обеспечил подсчет общей суммы и количества товаров.",
+            "Работал со StorageManager для загрузки и обновления данных.",
+            "Обеспечил связь между слоями Interactor, Presenter и View для корректного отображения данных и обработки пользовательских действий.",
+            "Участвовал в оптимизации и рефакторинге кода для улучшения производительности и читаемости."
+          ],
+          "github": "https://github.com/artkriukov/Shoppe"
+        }
+      },
+      {
+        "id": "bomb",
+        "title": "Bomb",
+        "category": "team",
+        "image": "assets/projects/GameBomb.gif",
+        "stack": ["UIKit", "MVC", "Lottie"],
         "details": {
           "description": "Мобильное приложение для интернет-магазина",
-          "features": ["Каталог товаров", "Корзина покупок"],
-          "tasks": ["Разработка UI", "Интеграция с бэкендом"],
-          "github": "https://github.com/yourusername/shoppe"
+          "features": [
+            "Разработал игровой экран (GameView) с использованием современных технологий и подходов."
+          ],
+          "tasks": [
+            "Создал динамичные анимации с помощью библиотеки Lottie, включая анимацию тиканья бомбы и взрыва.",
+            "Интегрировал звуковые эффекты: зацикленное тиканье бомбы и фоновую музыку.",
+            "Реализовал интерактивный таймер с функциями паузы и возобновления.",
+            "Добавил вибрацию для обратной связи при завершении игры.",
+             "Реализовал переход на следующий экран по завершении таймера."
+          ],
+          "github": "https://github.com/artkriukov/Boom"
         }
       }
     ]
